# learn-haskell

./: .gitignore  .hspec  CHANGELOG.md  HaskellApp.cabal  README.md  cabal.project.freeze  learn-haskell.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Ch02/: Function.hs  List.hs  Tuple.hs
src/Ch03/: BasicType.hs  DataType.hs
src/Ch04/: Case.hs  Guard.hs  Let.hs  PatternMatch.hs  Where.hs
src/Ch05/: Recursion.hs
src/Ch06/: DollarDot.hs  HighOrdFunction.hs  Lambda.hs
src/Ch07/: DataChar.hs  DataList.hs  DataMap.hs  DataSet.hs  Modules.hs
src/Ch08/: AlgebraicDataType.hs  Record.hs  RecursiveDataStructure.hs  TypeAlias.hs  TypeClass.hs  TypeParameter.hs
test/: SpecHelper.hs
test/Ch02/: FunctionSpec.hs
test/Ch03/: BasicTypeSpec.hs
