cabal-version:       3.8
name:                learn-haskell
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/zjjfly/learn-haskell#readme
license:             Apache-2.0
license-file:        LICENSE
author:              zjjfly
maintainer:          zjjblue@gmail.com
copyright:           2026 zjjfly
category:            learning
build-type:          Simple
extra-source-files:  README.md

library
  --如果source文件不是放在根目录的,需要告诉cabal它们的位置
  hs-source-dirs:      src
  --暴露给其他工厂的module
  exposed-modules:     Lib
                      ,Ch02.Function
                      ,Ch03.BasicType
                      ,Ch04.Case
                      ,Ch05.Recursion
                      ,Ch06.Lambda
                      ,Ch07.DataList
                      ,Ch07.Modules
  other-modules:       Ch02.List
                      ,Ch02.Tuple
                      ,Ch03.DataType
                      ,Ch04.Guard
                      ,Ch04.Let
                      ,Ch04.PatternMatch
                      ,Ch04.Where
                      ,Ch06.DollarDot
                      ,Ch06.HighOrdFunction
                      ,Ch07.DataChar
                      ,Ch07.DataMap
                      ,Ch07.DataSet
                      ,Ch08.AlgebraicDataType
                      ,Ch08.Record
                      ,Ch08.TypeParameter

  --内部的模块
  -- other-modules:
  build-depends:       base ^>= 4.18
                      ,containers ^>= 0.6.7
  default-language:    GHC2021

 --executable或library的header会跟一个应用名,中间不需要冒号分隔
executable learn-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , learn-haskell
  default-language:    GHC2021

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base ^>= 4.18
                     , hspec ^>= 2.11
                     , learn-haskell
  other-modules:       Ch02.FunctionSpec
                     , Ch03.BasicTypeSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    GHC2021

source-repository head
  type:     git
  location: https://github.com/zjjfly/learn-haskell.git
